fix: update CORS config to allow all origins and Netlify domain